src/index.css
@import "tailwindcss";
@layer components {
  .card {
    @apply bg-gray-300 w-96  md:w-80  lg:w-96  shadow-md rounded-md overflow-hidden h-96;
  }
  .category {
    @apply font-bold text-[#E60012] p-4;
  }
  .category-button {
    @apply flex items-center rounded md:rounded-lg border border-gray-200 text-gray-700  bg-gray-100  py-1 md:py-1.5 px-4 transition-all duration-200 hover:bg-gray-50 hover:border-red-300 hover:-translate-y-0.5 hover:shadow-sm text-sm md:text-base font-normal;
  }
  .active {
    @apply bg-[#E60012] text-white;
  }
  .full-article {
    @apply bg-[#E60012] text-white px-3 py-1.5 ml-2 rounded-sm hover:bg-red-800;
  }
}

@theme {
  --color-primary: #0f172a;
  --color-secondary: #64748b;
  --font-dosis: "Dosis";
  --font-roboto: "Roboto";
}

